--- a/Algorithm_Graphic/Algorithm_Graphic/Algorithm_Graphic.vcproj
+++ b/Algorithm_Graphic/Algorithm_Graphic/Algorithm_Graphic.vcproj
@@ -171,6 +171,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Amplitude.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\DrawPlot.cpp"
 				>
 			</File>
@@ -216,6 +220,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Amplitude.h"
+				>
+			</File>
 			<File
 				RelativePath=".\DrawPlot.h"
 				>
