--- a/Algorithm_Graphic/Algorithm_Graphic/Algorithm_Graphic.vcproj
+++ b/Algorithm_Graphic/Algorithm_Graphic/Algorithm_Graphic.vcproj
@@ -313,6 +313,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SNIP.h"
+				>
+			</File>
+			<File
 				RelativePath=".\SymmetricZeroArea.h"
 				>
 			</File>
